<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questions"
    style="@style/scrollview"
    tools:context="com.example.android.bavariaquiz.Questions">

    <LinearLayout style="@style/questions_linearlayout_main">

        <LinearLayout
            android:id="@+id/q1LL"
            style="@style/questions_linearlayout_questions.first">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question1" />

            <SeekBar
                android:id="@+id/q1SeekBar"
                style="@style/questions_seekbar"
                android:max="2" />

            <TextView
                android:id="@+id/q1SeekBarValue"
                style="@style/questions_seekbartext"
                android:text="@string/questions_question1_seekbartext" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q2LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question2" />

            <EditText
                android:id="@+id/q2TextValue"
                style="@style/questions_textedit"
                android:hint="@string/questions_question2_textedithint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q3LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question3" />

            <RadioGroup
                android:id="@+id/q3RadioGroup"
                style="@style/questions_radiogroup">

                <RadioButton
                    android:id="@+id/q3Radio1"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question3_radio1" />

                <RadioButton
                    android:id="@+id/q3Radio2"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question3_radio2" />

                <RadioButton
                    android:id="@+id/q3Radio3"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question3_radio3" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q4LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question4" />

            <RadioGroup
                android:id="@+id/q4RadioGroup"
                style="@style/questions_radiogroup">

                <RadioButton
                    android:id="@+id/q4Radio1"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question4_radio1" />

                <RadioButton
                    android:id="@+id/q4Radio2"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question4_radio2" />

                <RadioButton
                    android:id="@+id/q4Radio3"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question4_radio3" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q5LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question5" />

            <SeekBar
                android:id="@+id/q5SeekBar"
                style="@style/questions_seekbar"
                android:max="2" />

            <TextView
                android:id="@+id/q5SeekBarValue"
                style="@style/questions_seekbartext"
                android:text="@string/questions_question5_seekbartext" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q6LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question6" />

            <RadioGroup
                android:id="@+id/q6RadioGroup"
                style="@style/questions_radiogroup">

                <RadioButton
                    android:id="@+id/q6Radio1"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question6_radio1" />

                <RadioButton
                    android:id="@+id/q6Radio2"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question6_radio2" />

                <RadioButton
                    android:id="@+id/q6Radio3"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question6_radio3" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q7LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question7" />

            <LinearLayout style="@style/questions_linearlayout_check_first">

                <LinearLayout style="@style/questions_linear_layout_check_second">

                    <CheckBox
                        android:id="@+id/q7Check1"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check1" />

                    <CheckBox
                        android:id="@+id/q7Check2"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check2" />

                    <CheckBox
                        android:id="@+id/q7Check3"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check3" />

                    <CheckBox
                        android:id="@+id/q7Check4"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check4" />

                </LinearLayout>

                <LinearLayout style="@style/questions_linear_layout_check_second">

                    <CheckBox
                        android:id="@+id/q7Check5"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check5" />

                    <CheckBox
                        android:id="@+id/q7Check6"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check6" />

                    <CheckBox
                        android:id="@+id/q7Check7"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check7" />

                    <CheckBox
                        android:id="@+id/q7Check8"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question7_check8" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/q8LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question8" />

            <RadioGroup
                android:id="@+id/q8RadioGroup"
                style="@style/questions_radiogroup">

                <RadioButton
                    android:id="@+id/q8Radio1"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question8_radio1" />

                <RadioButton
                    android:id="@+id/q8Radio2"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question8_radio2" />

                <RadioButton
                    android:id="@+id/q8Radio3"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question8_radio3" />

                <RadioButton
                    android:id="@+id/q8Radio4"
                    style="@style/questions_radiobuttons"
                    android:text="@string/questions_question8_radio4" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q9LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question9" />

            <CheckBox
                android:id="@+id/q9Check1"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check1" />

            <CheckBox
                android:id="@+id/q9Check2"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check2" />

            <CheckBox
                android:id="@+id/q9Check3"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check3" />

            <CheckBox
                android:id="@+id/q9Check4"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check4" />

            <CheckBox
                android:id="@+id/q9Check5"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check5" />

            <CheckBox
                android:id="@+id/q9Check6"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check6" />

            <CheckBox
                android:id="@+id/q9Check7"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check7" />

            <CheckBox
                android:id="@+id/q9Check8"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check8" />

            <CheckBox
                android:id="@+id/q9Check9"
                style="@style/questions_checkbox"
                android:text="@string/questions_question9_check9" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q10LL"
            style="@style/questions_linearlayout_questions">

            <TextView
                style="@style/questions_questiontext"
                android:text="@string/questions_question10" />

            <LinearLayout style="@style/questions_linearlayout_check_first">

                <LinearLayout style="@style/questions_linear_layout_check_second">

                    <CheckBox
                        android:id="@+id/q10Check1"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question10_check1" />

                    <CheckBox
                        android:id="@+id/q10Check2"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question10_check2" />

                    <CheckBox
                        android:id="@+id/q10Check3"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question10_check3" />

                </LinearLayout>

                <LinearLayout style="@style/questions_linear_layout_check_second">

                    <CheckBox
                        android:id="@+id/q10Check4"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question10_check4" />

                    <CheckBox
                        android:id="@+id/q10Check5"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question10_check5" />

                    <CheckBox
                        android:id="@+id/q10Check6"
                        style="@style/questions_checkbox"
                        android:text="@string/questions_question10_check6" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonGoToResult"
            style="@style/button.questions_button"
            android:onClick="goToResult"
            android:text="@string/questions_button1" />

        <Button
            android:id="@+id/buttonBackToResult"
            style="@style/button.questions_button.hidden"
            android:onClick="backToResult"
            android:text="@string/questions_button2" />

        <TextView
            android:id="@+id/thankYouText"
            style="@style/questions_textview_thankyoutext"
            android:text="@string/questions_thankyoutext" />

    </LinearLayout>

</ScrollView>
