<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/linearLayout"
    tools:context="com.example.android.bavariaquiz.MainActivity">

    <ImageView
        style="@style/imageViewPortrait"
        android:src="@drawable/bg_portrait" />

    <TextView
        style="@style/textViewAppTitle"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/name"
        style="@style/mainEditText"
        android:hint="@string/main_textEdit_hintText" />

    <Button
        style="@style/button.mainBorderlessButton_portrait"
        android:onClick="goToQuiz"
        android:text="@string/main_buttonText" />

</LinearLayout>
